--- a/api/src/api/perrt/mock.ipynb
+++ b/api/src/api/perrt/mock.ipynb
@@ -420,7 +420,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"mock_vitals.pkl\")"
+    "# model.save(\"mock_vitals.pkl\")"
    ]
   },
   {
