--- a/docs/developer/deployment.qmd
+++ b/docs/developer/deployment.qmd
@@ -19,7 +19,8 @@ Ensure that you use a unique name for your `[project name]`. The production serv
 
 ### Initialise services
 
-This should be done the first time you stand up the services. It populates the Baserow database with the tables and static data required to run the rest of the HyUi services.
+This should be done the first time you stand up the services. It populates the Baserow database with the tables and static data required to run the rest of the HyUi services. You will also need to do this when you update your configuration (loading) data for Baserow. That is, you should consider Baserow as a temporary scratch pad, and mapping changes etc. will live in code (see `initialise/src/initialise/bed_defaults.json`). Before you 'redeploy', you must manually delete the tables from Baserow.
+
 
 ```sh
 ./bin/initialise.sh --operation baserow
