--- a/docs/developer/demo.qmd
+++ b/docs/developer/demo.qmd
@@ -1,3 +1,7 @@
+---
+title: Backend to frontend demonstration vignette
+---
+
 ## Example of how to create a new endpoint
 
 1. Create a 'back end' endpoint using FastAPI
