--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -1,9 +1,22 @@
 ---
-title: Hyperlocal Demand Forecasts
+title: HYLODE
+sidebar: false
+navbar: false
 ---
 
-Welcome to HYLODE!
+::: {.column-body}
+[![](resources/flurry-small.jpeg)](http://172.16.149.202:6001/)
+:::
 
-- Visit the [app](http://172.16.149.202:8300/abacus/main)!
-- Read the user [documentation]()
-- Explore the [developer guide](developer/index.qmd)
+::: {.callout-tip}
+## Visit the [application](http://172.16.149.202:6001/)!
+This link will only work from within the UCLH network, and you will need to contact the development team for a username and password.
+:::
+
+::: {.callout-note collapse=true appearance="default"}
+## Other resources
+
+- read the user [documentation](user/user.qmd)
+- explore the [developer guide](developer/setup.qmd)
+- get involved or learn more [about](about.qmd) the project
+:::
