password protection; freshen landing page

--- a/docs/developer/_workflow.qmd
+++ b/docs/developer/_workflow.qmd
@@ -63,7 +63,7 @@ class ModuleNames(str, Enum):
     """
 
     consults = "consults"
-    sitrep = "sitrep"
+    sitrep = "sitlist"
     mymodule = "mymodule"
 ```
 
