--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -10,7 +10,7 @@ navbar: false
 
 ::: {.callout-tip}
 ## Visit the [application](http://172.16.149.202:6001/)!
-This link will only work from within the UCLH network, and you will need to contact the development team for a username and password.
+This link will only work from within the UCLH network, and you will need to contact the development team for a username and password. The application is in _beta_ but we're keen to find early testers for feedback.
 :::
 
 ::: {.callout-note collapse=true appearance="default"}
@@ -19,4 +19,5 @@ This link will only work from within the UCLH network, and you will need to cont
 - read the user [documentation](user/user.qmd)
 - explore the [developer guide](developer/setup.qmd)
 - get involved or learn more [about](about.qmd) the project
+- try the [_alpha_](http://172.16.149.202:8300) version! 😬😱
 :::
