--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -17,7 +17,7 @@ This link will only work from within the UCLH network, and you will need to cont
 ## Other resources
 
 - read the user [documentation](user/user.qmd)
-- explore the [developer guide](developer/setup.qmd)
+- explore the developer [guide](developer/setup.qmd)
 - get involved or learn more [about](about.qmd) the project
 - try the [_alpha_](http://172.16.149.202:8300) version! 😬😱
 :::
