Update setup.qmd to refer to cache

--- a/docs/developer/setup.qmd
+++ b/docs/developer/setup.qmd
@@ -7,9 +7,10 @@ title: Setting up development for HyUi
 The root directory contains all the libraries that are used to power the HyUi dashboards.
 
 - `api`: This is a FastAPI app that does all the data wrangling and accessing of external sources such as to databases and web services. For each route there should be an equivalent mock route that allows this app to serve mock data when run in development. For example, if there is a `/census/` endpoint then there should be a corresponding `/mock/census` endpoint that only serves mock data.
-- `web`: This is contains the Plotly Dash web server code. It should *only* communicate with the `api` service. This allows the `api` service to provide mock data seamlessly when developing without needing to spin up other services to help development.
+- `web`: This contains the Plotly Dash web server code. It should *only* communicate with the `api` service. This allows the `api` service to provide mock data seamlessly when developing without needing to spin up other services to help development.
 - `models`: This contains all the Pydantic models that are used to share data between the `api` and `web`.
 - `initialise`: This sets-up the BaseRow instance that is used for configuration by the user.
+- `cache`: This contains the HTTP cache service that serves cached objects from `api` to `web` with a 5 minute expiry. See [the deployment docs](./deployment.qmd) for more information.
 
 ### Architecture Ideals
 - `web` should only communicate with `api` for data. This allows us to entirely mock data for `web` when developing.
