--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -16,8 +16,11 @@ This link will only work from within the UCLH network, and you will need to cont
 ::: {.callout-note collapse=true appearance="default"}
 ## Other resources
 
+- Link to the [Teams](https://teams.microsoft.com/l/meetup-join/19:meeting_NGIzYzBkN2QtNDI5YS00ZGZjLWExNTQtYTI1ZGE1MGY0NGQ2@thread.v2/0?context=%7B%22Tid%22:%2237c354b2-85b0-47f5-b222-07b48d774ee3%22,%22Oid%22:%2226287ec8-2886-4dff-a4fc-dda8e7a5e77c%22%7D) meeting for the morning sitrep
 - read the user [documentation](user/user.qmd)
 - explore the developer [guide](developer/setup.qmd)
 - get involved or learn more [about](about.qmd) the project
 - try the [_alpha_](http://172.16.149.202:8300) version! 😬😱
+- use the original [sitrep](http://uclvlddpragae08:5701/sitrep/T03)
+
 :::
