Adds alternative docker permissions setup instructions in case the original set don't work

--- a/docs/developer/deployment.qmd
+++ b/docs/developer/deployment.qmd
@@ -23,6 +23,13 @@ chmod -R g+swX "$PWD"
 This is expected to work optimally with a **freshly cloned git repository**.
 If working with an existing local repository containing multiple changes, docker builds or git pull/pushes may throw permissions errors as another user may have set restrictive permissions on a file crucial for either process. In many cases it is simplest to clone the repository from scratch and perform the steps above.
 
+As an alternative if the above is not working, you should try
+```bash
+chgrp -R docker /path/to/repository
+chmod -R g+rws /path/to/repository
+setfacl -R -m d:g::rwX /path/to/repository
+```
+
 ### Using the http cache
 
 We use [Varnish](https://varnish-cache.org) as a HTTP cache to speed up some of the slower API calls made by the front end. The default behaviour we follow is to skip the cache and manually identify endpoints which would benefit from caching.
