--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -16,7 +16,7 @@ This link will only work from within the UCLH network, and you will need to cont
 ::: {.callout-note collapse=true appearance="default"}
 ## Other resources
 
-- Link to the [Teams](https://teams.microsoft.com/l/meetup-join/19:meeting_ZjMzMGNiMjMtN2Q4OC00Zjk5LTgwYzYtZDgzNWY5YzQyMTY3@thread.v2/0?context=%7B%22Tid%22:%2237c354b2-85b0-47f5-b222-07b48d774ee3%22,%22Oid%22:%22d28a7a1f-9bc5-4843-be4b-2f668110b221%22%7D) meeting for the morning sitrep
+- Link to the [Teams](https://teams.microsoft.com/l/meetup-join/19%3ameeting_YTNmMTY1NzMtNzhiMy00NTVmLWEwMWMtMGEwMDFjNTcxMDI2%40thread.v2/0?context=%7b%22Tid%22%3a%2237c354b2-85b0-47f5-b222-07b48d774ee3%22%2c%22Oid%22%3a%22611d63e1-4ee1-4298-9b6c-03f51abbf202%22%7d) meeting for the morning sitrep
 - Link to [MediRota](https://uclhcc.medirota.com/)
 - read the user [documentation](user/user.qmd)
 - explore the developer [guide](developer/setup.qmd)
